# purple-mri

./: README.md  dependencies.txt  pyproject.toml
docker/: commands_nnunet_inference.sh  exvivo_docker.md  exvivo_singularity.md  pial_surface_binary_docker_singularity.md  sitecustomize.py  topology_correction_notes.md
docs/: about.rst
dots_to_template/: create_multi_comp_vtk_files.sh  dot_map_to_surface_template.sh
glm/: README.md  contrast.txt  get_roi_statistics.sh  glm.sh  glm_dbm.sh  prepare_vtk_files_for_glm.py  sample_design_matrix.txt  vertex_glm_analysis.sh  warp_to_template_space.sh
misc_scripts/: differences_between_lists.sh  flash_to_t2w_ACPC.md  flip_conform.sh  flywheel_download.py  get_flash_reslice_and_flash_dots.sh  mris_place_surface.cpp  reorient_secondary.py
parcellation/: parcellation.sh
pkg_src/: pyproject.toml
pkg_src/purple_mri/: __main__.py
pkg_src/purple_mri/scripts/: create_mesh.sh  decimate_mesh.py  make_fs_directories.sh  parcellation.sh  prepare_segm_files.sh  run_surface_pipeline.sh  topology_correction.sh
postsynth/: generate.py  helper.py
prepare_files_for_fs/: do_mni_txs.sh  make_fs_directories.sh  prep_aseg_files.sh  prep_hole_fill_wm_and_filled.sh
purple_mri/: create_mesh.sh  decimate_mesh.py  do_mni_txs.sh  make_fs_directories.sh  parcellation.sh  prepare_segm_files.sh  run_surface_pipeline.sh  topology_correction.sh
scripts/: README.md  exvivo_invivo_greedy_registration.sh  register.sh  register_flash_t2w_ciss.sh  registration_exvivo_invivo_greedy_v2.sh
stats_and_viz/: convert_to_vtk_five_format.py  (+5 more)
(+55 files in other folders)
